add missing float_raster dep for manhattanize_slow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ dxf = ["ezdxf~=1.0.2"]
 svg = ["svgwrite"]
 visualize = ["matplotlib"]
 text = ["matplotlib", "freetype-py"]
+manhatanize_slow = ["float_raster"]
 
 
 [tool.ruff]
